<resources>
    <string name="app_name">HaziKura</string>
    <string name="household">kakeibo</string>
    <string name="map">map</string>
    <string name="title_household_accounts">家計簿</string>
    <string name="title_daily_necessities_management">日用品</string>
    <string name="title_remainder">予定</string>
    <string name="title_map_display">マップ</string>
    <string name="title_option">設定</string>
    <string name="main">Main Activity</string>
    <string name="move">MOVE</string>
    <string name="return_sub">RETURN</string>

    <string name="hello_main_fragment">家計簿</string>
    <string name="hello_inout_fragment">入力</string>
    <string name="hello_output_fragment">出力</string>
    <string name="hello_daily_necessities_management">日用品</string>
    <string name="hello_remainder">予定</string>
    <string name="hello_map_display">マップ</string>
    <string name="hello_option_fragment">設定</string>

    <string name="no_date">No Data</string>
    <string name="pick_date">Pick Date</string>
    <string name="todo">TODO</string>
    <string name="date">日付を選択してください</string>
    <string name="select_date">日付を選択</string>
    <string name="decide">決定</string>
    <string name="amount">金額を入力してください</string>
    <string name="content">内容を入力してください</string>
    <string name="number">個数を入力してください</string>
    <string name="allDelete">全削除</string>
    <string name="title_date">日付：</string>
    <string name="title_Content">金額：</string>

</resources>
