<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.hazikura.fragment.Household.OutputFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/output_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_output_fragment"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/display_date2"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-163dp"
        android:layout_marginTop="156dp"
        android:textSize="18sp"
        android:text="@string/date"/>

    <Button
        android:id="@+id/dateButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/display_date2"
        android:layout_alignParentEnd="true"
        android:text="@string/select_date"></Button>

    <EditText
        android:id="@+id/output_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/display_date2"
        android:layout_marginTop="163dp"
        android:hint="@string/amount"
        android:inputType="" />

    <EditText
        android:id="@+id/output_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="241dp"
        android:hint="@string/content"
        android:inputType="" />


    <Button
        android:id="@+id/write_output"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:text="@string/decide"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat"></Button>

</RelativeLayout>